# lacrei-saude-desafio-tecnico

./: .dockerignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build_image.yaml  lint_test.yaml  pipeline.yaml
contrib/: env-sample
lacrei/: asgi.py  settings.py  urls.py  wsgi.py
lacrei/core/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
lacrei/core/migrations/: 0001_initial.py
lacrei/medical/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
lacrei/medical/migrations/: 0001_initial.py  0002_appointment.py
lacrei/medical/tests/: test_appointment.py  test_professional.py
