[project]
name = "lacrei-saude-desafio-tecnico"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Alves",email = "gabriel.alves.monteiro1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django (>=6.0.7,<7.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-phonenumber-field[phonenumbers] (>=8.4.0,<9.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.21,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "typos (>=1.48.0,<2.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.poetry]
name = "lacrei-saude-desafio-tecnico"
packages = [
    { include = "lacrei" }
]

[tool.ruff]
line-length = 79
extend-exclude = ['manage.py', 'lacrei/settings.py', 'migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lacrei.settings"
pythonpath = "."
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
addopts = '-p no:warnings'

[tool.typos.files]
extend-exclude = ['htmlcov/*']

[tool.taskipy.tasks]
manage='python $VIRTUAL_ENV/../manage.py'
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'task manage runserver'
pre_test = 'task lint'
test = 'pytest -s -x --cov=lacrei -vv'
post_test = 'coverage html'
test_dev = 'pytest -s -x --no-migrations -vvv'
